<resources>
    <string name="app_name">Shop&amp;Pay</string>
    <string name="string_internet_connection_not_available">Internet Connection Not Available</string>
    <string name="string_some_thing_wrong">Something went wrong.</string>
    <string name="string_getting_json_message">Gathering product information!.</string>
    <string name="string_history_json_message">Gathering purchases information!.</string>
    <string name="string_buying_json_message">Buying your products!</string>
    <string name="string_logging_json_message">Automatic login in progress!</string>
    <string name="string_getting_json_title">Loading...</string>
    <string name="string_click_to_load">Click on FloatingActionButton to Load JSON</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Personal name</string>
    <string name="fiscal_number">Fiscal Number</string>
    <string name="idcard">Cedit Card Number</string>
    <string name="address">Home Address</string>
    <string name="credit_card_expiration">Expiration Date</string>
    <string name="postal_code">Postal Code</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
